# dotfiles

./: .gitconfig  .gitignore  .tmux.conf  .vimrc  .zshrc  README.md  alacritty.toml
chatbots/: _chat.py  chat.py  chatbot.sh  envconfigs  prompts.md  pyproject.toml
ghostty/: config
i3/: config
lsp-configs/: .clang-format
nvim/: .init.vim  ftfix.md  init.lua  remap.lua
nvim/after/ftplugin/: c.lua  cpp.lua  markdown.lua  python.lua  rust.lua  tex.lua  typ.lua  typst.lua  zig.lua
nvim/ftplugin/: c.lua  cpp.lua  markdown.lua  py.lua  python.lua  rust.lua  tex.lua  typ.lua
nvim/lsp/: clangd.lua  lua_ls.lua  texlab.lua  tinymist.lua  zls.lua
nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
nvim/lua/custom/plugins/: autopairs.lua  copilot.lua
nvim/lua/danjd/: harpoon.lua  init.lua  insert_comment.lua  packer.lua  remap.lua  set.lua
nvim/lua/plugins/: autopairs.lua  colorscheme.lua  completion.lua  fzf.lua  gitsigns.lua  mason.lua  telescope.lua  treesitter.lua  which-key.lua
picom/: README
polybar/: config.ini  gruvbox.ini  launch.sh  mocha.ini  mocha_config.ini
waybar/: config
